--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -59,12 +59,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountData.cs" />
+    <Compile Include="GroupRemovalTest.cs" />
     <Compile Include="GroupData.cs" />
     <Compile Include="PersonData.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
     <Compile Include="ContactCreationTests.cs" />
+    <Compile Include="UnitTest3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
