--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -58,16 +58,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountData.cs" />
-    <Compile Include="GroupRemovalTest.cs" />
-    <Compile Include="GroupData.cs" />
-    <Compile Include="PersonData.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Model\AccountData.cs" />
+    <Compile Include="AppManager\ApplicationManager.cs" />
+    <Compile Include="AppManager\ContactHelper.cs" />
+    <Compile Include="AppManager\GroupHelper.cs" />
+    <Compile Include="Tests\GroupRemovalTest.cs" />
+    <Compile Include="Model\GroupData.cs" />
+    <Compile Include="AppManager\HelperBase.cs" />
+    <Compile Include="AppManager\LogIn_LogOut_Helper.cs" />
+    <Compile Include="AppManager\NavigationHelper.cs" />
+    <Compile Include="Model\PersonData.cs" />
+    <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GroupCreationTests.cs" />
-    <Compile Include="ContactCreationTests.cs" />
-    <Compile Include="UnitTest3.cs" />
+    <Compile Include="Tests\GroupCreationTests.cs" />
+    <Compile Include="Tests\ContactCreationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
