--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -62,9 +62,10 @@
     <Compile Include="AppManager\ApplicationManager.cs" />
     <Compile Include="AppManager\ContactHelper.cs" />
     <Compile Include="AppManager\GroupHelper.cs" />
-    <Compile Include="Tests\ContactModifTests.cs" />
-    <Compile Include="Tests\GroupModificationTests.cs" />
-    <Compile Include="Tests\GroupRemovalTests.cs" />
+    <Compile Include="Tests\Contact_Modif_Tests.cs" />
+    <Compile Include="Tests\Contact_Removal_Tests.cs" />
+    <Compile Include="Tests\Group_Modification_Tests.cs" />
+    <Compile Include="Tests\Group_Removal_Tests.cs" />
     <Compile Include="Model\GroupData.cs" />
     <Compile Include="AppManager\HelperBase.cs" />
     <Compile Include="AppManager\LogIn_LogOut_Helper.cs" />
@@ -72,8 +73,8 @@
     <Compile Include="Model\PersonData.cs" />
     <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\GroupCreationTests.cs" />
-    <Compile Include="Tests\ContactCreationTests.cs" />
+    <Compile Include="Tests\Group_Creation_Tests.cs" />
+    <Compile Include="Tests\Contact_Creation_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\..\Desktop\ClassDiagram2.cd">
