--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AppManager\ApplicationManager.cs" />
     <Compile Include="AppManager\ContactHelper.cs" />
     <Compile Include="AppManager\GroupHelper.cs" />
+    <Compile Include="Tests\AuthTestBase.cs" />
     <Compile Include="Tests\Contact_Modif_Tests.cs" />
     <Compile Include="Tests\Contact_Removal_Tests.cs" />
     <Compile Include="Tests\Group_Modification_Tests.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="AppManager\LogIn_LogOut_Helper.cs" />
     <Compile Include="AppManager\NavigationHelper.cs" />
     <Compile Include="Model\PersonData.cs" />
+    <Compile Include="Tests\LoginTests.cs" />
     <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Group_Creation_Tests.cs" />
